--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ libconftest.dylib*
 *.pyc
 *.o
 *.o-*
+*.patch
 *.a
 *.pb.cc
 *.pb.h
@@ -78,6 +79,7 @@ libconftest.dylib*
 
 # Compilation and Qt preprocessor part
 *.qm
+Makefile
 kepler-qt
 Kepler-Qt.app
 
